<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/card_search"
            android:icon="@drawable/ic_search"
            android:title="@string/card_search"
            android:checked="true"/>
        <item
            android:id="@+id/deck_builder"
            android:icon="@drawable/ic_deck_builder"
            android:title="@string/deck_builder" />
        <item
            android:id="@+id/donate"
            android:icon="@drawable/ic_donate"
            android:title="@string/donate" />
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>

</menu>
