<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/card_search_menu_group" >

        <!-- LayoutSwitcher -->
        <item
            android:id="@+id/nav_switch"
            android:title=""
            app:showAsAction="always"
            app:actionLayout="@layout/action_view_switch"/>
        <item
            android:id="@+id/action_filter"
            android:icon="@drawable/ic_filter"
            android:title="@string/action_filter"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_sort"
            android:title="@string/sort"
            app:showAsAction="never"/>

    </group>

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>