<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/expanded_card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <!-- Full Card Image -->
        <android.support.v4.view.ViewPager
            android:id="@+id/image_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/image_indicator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dots_height"
        android:layout_above="@+id/excv_info_card"
        android:layout_marginBottom="@dimen/dots_margin"
        android:gravity="center"
        android:orientation="horizontal" />

    <!-- TODO: FAB, Level Tabs -->

    <!-- Data From JSON -->
    <android.support.v7.widget.CardView
        android:id="@+id/excv_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:animateLayoutChanges="true" >

        <ImageView
            android:id="@+id/card_rarity"
            android:layout_width="match_parent"
            android:layout_height="@dimen/rarity_bar_height"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/rarity"/>

        <RelativeLayout
            android:id="@+id/full_card_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_rarity"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/faction_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/full_card_faction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:contentDescription="@string/faction"/>

                <TextView
                    android:id="@+id/full_card_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/atk_health"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/faction_name_container"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/atk_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/atk_header"/>

                <TextView
                    android:id="@+id/full_card_attack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="14dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/textColorSecondary" />

                <TextView
                    android:id="@+id/hlth_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/hlth_header"/>

                <TextView
                    android:id="@+id/full_card_health"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="14dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/textColorSecondary" />

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="16dp"
                android:layout_below="@+id/atk_health"
                android:background="@color/dividerColor" />

            <LinearLayout
                android:id="@+id/full_card_parameters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/type_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_header"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/full_card_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/set_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_header"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/full_card_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/draft_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/draft_header"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/draft_bool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/description_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_header"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/full_card_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"/>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/new_deck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_add_deck" />

</RelativeLayout>