<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/card_type_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center" >

        <RelativeLayout
            android:id="@+id/creatures_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground">

            <CheckBox
                android:id="@+id/creature_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:checked="true" />

            <TextView
                android:id="@+id/creature_list_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/creature_check_box"
                android:layout_toRightOf="@+id/creature_check_box"
                android:text="@string/creature"
                android:textSize="16sp"
                android:padding="16dp"
                android:singleLine="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/spell_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground">

            <CheckBox
                android:id="@+id/spell_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:checked="true" />

            <TextView
                android:id="@+id/spell_list_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/spell_check_box"
                android:layout_toRightOf="@+id/spell_check_box"
                android:text="@string/spell"
                android:textSize="16sp"
                android:padding="16dp"
                android:singleLine="true"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/rarity_faction_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:padding="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/card_rarity_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/rarity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/rarity"
                android:textSize="18sp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rarity_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_faction_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/faction_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/faction"
                android:textSize="18sp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/faction_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_set_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/set_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/set_title"
            android:textSize="18sp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/set_rv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />

    </LinearLayout>

</LinearLayout>