<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/card_margin"
    android:layout_marginLeft="@dimen/card_margin"
    android:layout_marginEnd="@dimen/card_margin"
    android:layout_marginRight ="@dimen/card_margin"
    android:layout_marginTop="16dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Card Contents -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/top_half"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/card_rarity"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rarity_bar_height"
                    android:contentDescription="@string/rarity"/>

                <ImageView
                    android:id="@+id/card_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/image"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/card_faction"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/top_half"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/faction"/>

            <TextView
                android:id="@+id/card_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/top_half"
                android:layout_toEndOf="@id/card_faction"
                android:layout_toRightOf="@id/card_faction"
                android:layout_centerVertical="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:textSize="16sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>