<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/expanded_card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Full Card Image -->
    <ImageView
        android:id="@+id/full_card_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"/>

    <LinearLayout
        android:id="@+id/atk_health"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rec_default">

        <TextView
            android:id="@+id/full_card_attack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:textSize="20sp"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/full_card_health"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:textSize="20sp"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <!-- TODO: FAB, Level Tabs -->

    <!-- Data From JSON -->
    <RelativeLayout
        android:id="@+id/full_card_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp">

        <ImageView
            android:id="@+id/full_card_faction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/faction"/>

        <TextView
            android:id="@+id/full_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/full_card_faction"
            android:layout_toRightOf="@id/full_card_faction"
            android:layout_alignParentTop="true"
            android:textSize="25sp" />

        <!-- TODO: Implement Divider -->

        <LinearLayout
            android:id="@+id/full_card_parameters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/full_card_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/full_card_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/draft_bool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/description_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_header"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/full_card_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="16sp"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>